--- a/categories.html
+++ b/categories.html
@@ -20,7 +20,7 @@
 	<section class="navbar">
 		<div class="container">
 			<div class="logo">
-				<a href="index.html" aria-hidden="true"><img src="./img/loader.gif" alt=""></a>
+				<a href="index.html" aria-hidden="true"><img src="./img/loader.gif" alt="" width="100" height="100"></a>
 			</div>
 			<div class="menu text-right">
 				<ul>
@@ -36,142 +36,64 @@
 		</div>
 	</section>
 
-	<!-- header ends 0-->
-
-	
-	<!-- food  serach section starts  -->
-
-	<section class="food-search text-corner">
-		<div class="container">
-			<h2>Search Foods Here</h2>
-			<form action="#" method="post">
-				<input type="search" name="search" placeholder="search for food here.." required/>
-				<button type="submit" name="submit" value="Search" class="btn-primary">Submit</button>
-			</form>
-		</div>
-		
-	</section>
-	<!-- food serach section ends -->
+	<!--navr section  header ends 0-->
 
 
+	<!-- categories section start  here -->
 
-	<!-- categories section starts  -->
 	<section class="categories">
 		<div class="container">
-			<h2 class="text-center">Explore Foods</h2>
-			<a href="#">
-				<div class="box-3 float-container">
-					<img src="./img/g-1.jpg" alt="g-1" class="img-responsive img-curve">
-					<h3 class="floa-text tex-white">Burger</h3>
-				</div>
-			</a>
-			<a href="#">
-				<div class="box-3 float-container">
-					<img src="./img/g-2.jpg" alt="g-2" class="img-responsive img-curve">
-					<h3 class="floa-text tex-white">Sandwich</h3>
-				</div>
-			</a>
-			<a href="#">
-				<div class="box-3 float-container">
-					<img src="./img/g-3.jpg" alt="g-3" class="img-responsive img-curve">
-					<h3 class="floa-text tex-white">Tacos</h3>
-				</div>
-			</a>
+		<h2 class="text-center">Our Categories</h2>
 
-			<div class="clearfix"></div>
+		<a href="./order.html">
+			<div class="box-3 float-container">
+				<img src="./img/g-3.jpg" alt="" class="img-responsive img-curve" >
+
+				<h3 class="float-text" text-white>Sharwama</h3>
+			</div>
+		</a>
+		<a href="./order.html">
+			<div class="box-3 float-container">
+				<img src="./img/g-5.jpg" alt="" class="img-responsive img-curve" >
+
+				<h3 class="float-text" text-white>Sweets</h3>
+			</div>
+		</a>
+		<a href="./order.html">
+			<div class="box-3 float-container">
+				<img src="./img/g-4.jpg" alt="" class="img-responsive img-curve" >
+
+				<h3 class="float-text" text-white>Cupcake</h3>
+			</div>
+		</a>
+		<a href="./order.html">
+			<div class="box-3 float-container">
+				<img src="./img/g-1.jpg" alt="" class="img-responsive img-curve" >
+
+				<h3 class="float-text" text-white>Burger</h3>
+			</div>
+		</a>
+		<a href="./order.html">
+			<div class="box-3 float-container">
+				<img src="./img/g-2.jpg" alt="" class="img-responsive img-curve" >
+
+				<h3 class="float-text" text-white>Yummy</h3>
+			</div>
+		</a>
+		<a href="./order.html">
+			<div class="box-3 float-container">
+				<img src="./img/g-8.jpg" alt="" class="img-responsive img-curve" >
+
+				<h3 class="float-text" text-white>Chocolate</h3>
+			</div>
+		</a>
 		</div>
-
 	</section>
 
-	<!-- categories section ends  -->
-
-
-	<!-- food menu start here  -->
-
-	<section class="food-menu">
-		<div class="container">
-			<h2 class="text-center">Our Menu</h2>
-
-
-			<div class="food-menu-box">
-				<div class="food-menu-img">
-					<img src="./img/pic1.png" alt="">
-				</div>
-				<div class="food-menu-desc">
-					<h4>Cup cake</h4>
-					<p class="food-price">10.00$/</p>
-					<p class="food-details">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde quidem consequuntur explicabo, officiis facere, saepe quis eos ipsam eligendi dolore harum enim. Perferendis quam pariatur saepe doloremque. Asperiores, exercitationem illo!</p>
-					<a href="order.html" class="btn-primary">Order Now</a>
-				</div>
-			</div>
-			<div class="food-menu-box">
-				<div class="food-menu-img">
-					<img src="./img/pic2.png" alt="">
-				</div>
-				<div class="food-menu-desc">
-					<h4>Desert milk</h4>
-					<p class="food-price">15.00$/</p>
-					<p class="food-details">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, dolorum?</p>
-					<a href="order.html" class="btn-primary">Order Now</a>
-				</div>
-			</div>
-			<div class="food-menu-box">
-				<div class="food-menu-img">
-					<img src="./img/s-1.png" alt="">
-				</div>
-				<div class="food-menu-desc">
-					<h4>Chicken</h4>
-					<p class="food-price">25.00$/</p>
-					<p class="food-details">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-					<a href="order.html" class="btn-primary">Order Now</a>
-				</div>
-			</div>
-			<div class="food-menu-box">
-				<div class="food-menu-img">
-					<img src="./img/s-3.png" alt="">
-				</div>
-				<div class="food-menu-desc">
-					<h4>Toast Bread</h4>
-					<p class="food-price">12.00$/</p>
-					<p class="food-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-					<a href="order.html" class="btn-primary">Order Now</a>
-				</div>
-			</div>
-			<div class="food-menu-box">
-				<div class="food-menu-img">
-					<img src="./img/g-8.jpg" alt="">
-				</div>
-				<div class="food-menu-desc">
-					<h4>Chocolate</h4>
-					<p class="food-price">5.00$/</p>
-					<p class="food-details">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-					<a href="order.html" class="btn-primary">Order Now</a>
-				</div>
-			</div>
-			<div class="food-menu-box">
-				<div class="food-menu-img">
-					<img src="./img/g-9.jpg" alt="">
-				</div>
-				<div class="food-menu-desc">
-					<h4>Yummy Cake Bread</h4>
-					<p class="food-price">35.00$/</p>
-					<p class="food-details">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis atque eos aliquid architecto voluptatibus rerum illum iste at sapiente quasi magnam consectetur eum repellendus, veritatis iure. Ipsam ab harum temporibus.</p>
-					<a href="order.html" class="btn-primary">Order Now</a>
-				</div>
-			</div>
-
-			<div class="classfix"></div>
-
-		</div>
-		<p class="text-center">
-			<a href="#">See all foods</a>
-		</p>
-	</section>
-
+	<!-- categories section ends here -->
 
 	
-	<!-- food menu ends here -->
-
+	
 	<!-- social starts here -->
 <section class="social">
 		<div class="container">
@@ -187,6 +109,7 @@
 	</section>
 	
 	<!-- social ends here -->
+
 
 
 	<!-- footer section starts here -->
