--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<section class="navbar">
 		<div class="container">
 			<div class="logo">
-				<a href="index.html" aria-hidden="true"><img src="./img/loader.gif" alt=""></a>
+				<a href="index.html" aria-hidden="true"><img src="./img/loader.gif" alt="" width="100" height="100"></a>
 			</div>
 			<div class="menu text-right">
 				<ul>
